# ParticipateIT

Backend/: .gitignore  Cargo.toml
Backend/resources/: data.fdf  fdftempl.txt
Backend/src/: fdf_converter.rs  fdfconverter.rs  main.rs
src/: main.rs
