[package]
name = "backend"
version = "0.1.0"
authors = ["Swexbe <erik@erikjohnsson.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0.101"
serde_derive = "1.0.101"
pdf_form = "0.2.0"
handlebars = "2.0.2"
encoding = "0.2.33"
